<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white_1000"
    tools:context=".landing.ui.loanTask.ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/md_theme_primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            style="@style/Text.Title.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/title_home"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/appDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/appDesc"
            style="@style/Text.Label.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="RM Application"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/appTitle"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/myTasksText"
        style="@style/Text.Title.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/my_tasks"
        android:textColor="@color/md_theme_primary"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/myTasksText"
        app:layout_constraintTop_toBottomOf="@+id/myTasksText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine"
        tools:itemCount="5" />

    <ImageView
        android:id="@+id/noDataFoundIcon"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_empty_folder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myTasksText" />

    <TextView
        android:id="@+id/noDataFound"
        style="@style/Text.Label.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/no_data_found"
        android:textColor="@color/md_theme_secondary"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/noDataFoundIcon"
        app:layout_constraintStart_toStartOf="@id/noDataFoundIcon"
        app:layout_constraintTop_toBottomOf="@+id/noDataFoundIcon" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noDataFoundGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="noDataFound,noDataFoundIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>