<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".auth.login.ui.LoginFragment">

    <include
        android:id="@+id/backLayout"
        layout="@layout/layout_back_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white_1000"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="top"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Text.Title.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/cred_has_beed_sent_your_via_mail"
                        android:textColor="@color/md_theme_secondary_container"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        style="@style/Text.Title.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center|start"
                        android:maxLines="3"
                        android:text="@string/we_will_send_an_otp_for_verification"
                        android:textColor="@color/color_grey_400"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="visible" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/topLayout">

                <!-- Phone -->
                <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/background_card_soft_corner_grey"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:visibility="gone" />

                    <TextView
                        style="@style/Text.Label.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="(+91)"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/_18ssp"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/phone"
                        style="@style/Text.Label.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:background="@null"
                        android:digits="0123456789"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/text_color_black"
                        android:textColorHint="@color/color_grey_400" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <!-- Email -->
                    <LinearLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_card_soft_corner_grey"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:visibility="gone" />

                        <TextView
                            style="@style/Text.Label.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="🇮🇳  (+91)"
                            android:textColor="@color/color_black_1000"
                            android:textSize="@dimen/_18ssp"
                            android:visibility="gone" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            app:hintEnabled="true">

                            <EditText
                                android:id="@+id/email"
                                style="@style/Text.Label.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/email_address_text"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:paddingStart="@dimen/_10sdp"
                                android:textColor="@color/color_grey_400"
                                android:textColorHint="@color/color_grey_400" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/background_card_soft_corner_grey"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:visibility="gone" />

                        <TextView
                            style="@style/Text.Label.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="🇮🇳  (+91)"
                            android:textColor="@color/color_black_1000"
                            android:textSize="@dimen/_18ssp"
                            android:visibility="gone" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            app:hintEnabled="true"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/password"
                                style="@style/Text.Label.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/password"
                                android:imeOptions="actionGo"
                                android:inputType="textWebPassword"
                                android:paddingStart="@dimen/_10sdp"
                                android:textColor="@color/color_grey_400"
                                android:textColorHint="@color/color_grey_400" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <!--forgot password-->
                    <LinearLayout
                        android:id="@+id/forgotPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="bottom|end"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            style="@style/Text.Label.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/_14ssp"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/ButtonLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="bottom"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/terms"
                        style="@style/Text.Label.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:lines="2"
                        android:text="@string/terms_and_policy_text"
                        android:textColor="@color/color_grey_400"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/ButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@drawable/background_soft_corner_primary"
                        android:fontFamily="@font/font_open_sans_regular"
                        android:paddingLeft="@dimen/_50sdp"
                        android:paddingRight="@dimen/_50sdp"
                        android:text="@string/send_otp"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white_1000"
                        android:textSize="@dimen/_16ssp" />
                </LinearLayout>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>