<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:clickable="true"
    android:focusable="true">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/md_theme_secondary"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:visibility="visible">

        <ImageView
            android:id="@+id/toolbarBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_left"
            android:visibility="visible"
            app:tint="@color/color_black_1000" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white_1000"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="top"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Text.Label.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/verify_otp"
                        android:textColor="@color/color_grey_400"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        style="@style/Text.Label.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center|start"
                        android:maxLines="3"
                        android:text="@string/we_will_send_an_otp_for_verification"
                        android:textColor="@color/color_grey_300"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/topLayout">

                <!-- Phone -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/otpLayout"
                        layout="@layout/otp_design"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/ButtonLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="bottom"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/terms"
                        style="@style/Text.Label.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:lines="2"
                        android:text="@string/terms_and_policy_text"
                        android:textColor="@color/color_grey_400"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/ButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <LinearLayout
                        android:id="@+id/helpLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:visibility="gone"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:elevation="@dimen/_15sdp"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/setting"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="start|center"
                            android:src="@drawable/ic_whatsapp"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="visible" />
                        <!--
                            app:tint="@color/md_theme_secondary"
                            tools:tint="@color/md_theme_secondary"-->

                        <TextView
                            android:id="@+id/help"
                            style="@style/Text.Label.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_gravity="center|start"
                            android:gravity="center|start"
                            android:maxLines="1"
                            android:text="@string/facing_issue_in_login_click_here"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@drawable/background_soft_corner_primary"
                        android:fontFamily="@font/font_open_sans_regular"
                        android:paddingLeft="@dimen/_50sdp"
                        android:paddingRight="@dimen/_50sdp"
                        android:text="@string/verify_otp"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white_1000"
                        android:textSize="@dimen/_16ssp" />
                </LinearLayout>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>